--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>Site Exemplo</title>
+    <title>Projeto Fashion</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
         <article>
 
             <section class="apresentacao">
-                <h1>New Fashion Everything Never Enough</h1>
+                <h1 lang="en-US">New Fashion Everything Never Enough</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris volutpat nisi non ante dictum congue. Cras id odio gravida, posuere velit sed, lacinia mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vehicula, ipsum vel congue cursus, mi neque tincidunt enim, egestas porttitor felis neque et risus. Maecenas fringilla hendrerit enim malesuada laoreet. Aenean quis tortor a odio tempus tincidunt. Vivamus rutrum nulla sed metus congue bibendum. Sed ut aliquam purus. Donec odio mauris, commodo sed dignissim vitae, dapibus eget mauris.</p>
             </section>
 
@@ -65,12 +65,11 @@
             </section>
 
             <section class="just-fashion">
-                <h2>Everything Never Enough <br> Just fashion</h2>
+                <h2 lang="en-US">Everything Never Enough <br> Just fashion</h2>
 
                 <p>Praesent placerat eros eget lacus ullamcorper, id dapibus ante vestibulum. Curabitur quis condimentum diam. Duis aliquet erat vel laoreet tincidunt. Pellentesque vitae varius ligula. Phasellus in nibh tempus, gravida justo et, suscipit felis. Cras ornare arcu ac sodales tincidunt. Mauris vehicula erat vel ligula porttitor imperdiet. Curabitur nec magna urna. Sed porta ex ex, at pulvinar nibh aliquet quis. Integer dapibus congue vestibulum. Phasellus bibendum lobortis quam, nec sollicitudin nisl volutpat at.</p>
             </section>
             <aside>
-
                 <p>Call me now for design <br> 012-1234-4567</p>
             </aside>
 
